Started the Excercise

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
           fn+F12)
         </p>
         <div id="inputContainer">
-          <!-- Add label, input, and button HERE -->
+         <label for="generate">What do you want to see?</label><br>
+         <input type="text" id="generate" name="generate" placeholder="Keyword Here">
+         <button id="button">Generate</button>
         </div>
 
         <div id="imageContainer" style="max-width: 680px">
