Added CSS file and edited html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JavaScript APIs</title>
+    <link rel="stylesheet" href="app.css"></link>
+    <title>Giphy Search</title>
   </head>
   <body>
     <main
@@ -15,12 +16,11 @@
       "
     >
       <div>
-        <h1>JavaScript APIs</h1>
-        <p>
-          Open the Browser Console to view your work (Right-Click => Inspect or
-          fn+F12)
+        <h1>Random Giphy Search</h1>
+        <p class="font">
+          Search using a keyword! We will generate a random gif for you to view. 
         </p>
-        <div id="inputContainer">
+        <div id="inputContainer" class="font">
          <label for="generate">What do you want to see?</label><br>
          <input type="text" id="generate" name="generate" placeholder="Keyword Here">
          <button id="button">Generate</button>
